{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 298,
  "lineage": "177b8300-ffa0-0ad3-8f6b-b1ebeb45af94",
  "resources": [
    {
      "module": "module.clb",
      "mode": "managed",
      "type": "aws_elb",
      "name": "grafana_clb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:808407022124:loadbalancer/grafana-clb",
            "availability_zones": [
              "us-east-1a"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "grafana-clb-1645688492.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:30666/login",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "grafana-clb",
            "idle_timeout": 400,
            "instances": [
              "i-020018ca845ae4ca8",
              "i-0d33b452722876546",
              "i-0f9801379fecfa539"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 30666,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "grafana-clb",
            "region": "us-east-1",
            "security_groups": [
              "sg-071aa356770d63f25"
            ],
            "source_security_group": "808407022124/clb-sg",
            "source_security_group_id": "sg-071aa356770d63f25",
            "subnets": [
              "subnet-07357a35dbc5c0319"
            ],
            "tags": {
              "Name": "grafana-clb"
            },
            "tags_all": {
              "Name": "grafana-clb"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.iam.aws_iam_instance_profile.k8s_nodes_profile",
            "module.iam.aws_iam_role.k8s_nodes_role",
            "module.instances.aws_instance.master",
            "module.instances.aws_instance.worker",
            "module.instances.aws_key_pair.bastion_key",
            "module.instances.tls_private_key.bastion_key",
            "module.security_groups.aws_security_group.clb",
            "module.security_groups.aws_security_group.master",
            "module.security_groups.aws_security_group.workers",
            "module.subnets.aws_subnet.private",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.clb",
      "mode": "managed",
      "type": "aws_elb",
      "name": "tomcat_clb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:808407022124:loadbalancer/tomcat-clb",
            "availability_zones": [
              "us-east-1a"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "tomcat-clb-419425290.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:32080/login",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "tomcat-clb",
            "idle_timeout": 60,
            "instances": [
              "i-020018ca845ae4ca8",
              "i-0d33b452722876546",
              "i-0f9801379fecfa539"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 32080,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "tomcat-clb",
            "region": "us-east-1",
            "security_groups": [
              "sg-071aa356770d63f25"
            ],
            "source_security_group": "808407022124/clb-sg",
            "source_security_group_id": "sg-071aa356770d63f25",
            "subnets": [
              "subnet-07357a35dbc5c0319"
            ],
            "tags": {
              "Name": "tomcat-clb"
            },
            "tags_all": {
              "Name": "tomcat-clb"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.iam.aws_iam_instance_profile.k8s_nodes_profile",
            "module.iam.aws_iam_role.k8s_nodes_role",
            "module.instances.aws_instance.master",
            "module.instances.aws_instance.worker",
            "module.instances.aws_key_pair.bastion_key",
            "module.instances.tls_private_key.bastion_key",
            "module.security_groups.aws_security_group.clb",
            "module.security_groups.aws_security_group.master",
            "module.security_groups.aws_security_group.workers",
            "module.subnets.aws_subnet.private",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c398cb65a93047f2",
            "arn": "arn:aws:ec2:us-east-1:808407022124:instance/i-0e70a0e0fd056a23e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e70a0e0fd056a23e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "key_name": "bastion-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-06a7ff32ece44a548"
              }
            ],
            "primary_network_interface_id": "eni-06a7ff32ece44a548",
            "private_dns": "ip-192-168-10-22.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.10.22",
            "public_dns": "ec2-98-92-114-48.compute-1.amazonaws.com",
            "public_ip": "98.92.114.48",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06e74b47785017cb5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-05daf7dc6cc3043f0"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07357a35dbc5c0319",
            "tags": {
              "Name": "bastion"
            },
            "tags_all": {
              "Name": "bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05daf7dc6cc3043f0"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "808407022124",
            "id": "i-0e70a0e0fd056a23e",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.instances.aws_key_pair.bastion_key",
            "module.instances.tls_private_key.bastion_key",
            "module.security_groups.aws_security_group.bastion-sg",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c398cb65a93047f2",
            "arn": "arn:aws:ec2:us-east-1:808407022124:instance/i-0214bd1458f36d3cf",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "jenkins-instance-profile",
            "id": "i-0214bd1458f36d3cf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "bastion-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0a95d8e8fb78f4bd2"
              }
            ],
            "primary_network_interface_id": "eni-0a95d8e8fb78f4bd2",
            "private_dns": "ip-192-168-10-5.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.10.5",
            "public_dns": "ec2-98-92-192-17.compute-1.amazonaws.com",
            "public_ip": "98.92.192.17",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-074109608a6905d15",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-043bf0655b9282c62"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07357a35dbc5c0319",
            "tags": {
              "Name": "jenkins"
            },
            "tags_all": {
              "Name": "jenkins"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-043bf0655b9282c62"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "808407022124",
            "id": "i-0214bd1458f36d3cf",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.iam.aws_iam_instance_profile.jenkins_profile",
            "module.iam.aws_iam_role.jenkins_role",
            "module.instances.aws_key_pair.bastion_key",
            "module.instances.tls_private_key.bastion_key",
            "module.security_groups.aws_security_group.jenkins",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c398cb65a93047f2",
            "arn": "arn:aws:ec2:us-east-1:808407022124:instance/i-020018ca845ae4ca8",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "k8s-nodes-instance-profile",
            "id": "i-020018ca845ae4ca8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "bastion-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-011c2908401b5d681"
              }
            ],
            "primary_network_interface_id": "eni-011c2908401b5d681",
            "private_dns": "ip-192-168-20-71.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.20.71",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Name": "master-volume"
                },
                "tags_all": {
                  "Name": "master-volume"
                },
                "throughput": 125,
                "volume_id": "vol-09157e91855c4143b",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0d0eda287472d94bd"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-066913c392fff5b8a",
            "tags": {
              "Name": "master"
            },
            "tags_all": {
              "Name": "master"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d0eda287472d94bd"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "808407022124",
            "id": "i-020018ca845ae4ca8",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.iam.aws_iam_instance_profile.k8s_nodes_profile",
            "module.iam.aws_iam_role.k8s_nodes_role",
            "module.instances.aws_key_pair.bastion_key",
            "module.instances.tls_private_key.bastion_key",
            "module.security_groups.aws_security_group.master",
            "module.subnets.aws_subnet.private",
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c398cb65a93047f2",
            "arn": "arn:aws:ec2:us-east-1:808407022124:instance/i-0d33b452722876546",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "k8s-nodes-instance-profile",
            "id": "i-0d33b452722876546",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "bastion-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-06a5cde4dff260c72"
              }
            ],
            "primary_network_interface_id": "eni-06a5cde4dff260c72",
            "private_dns": "ip-192-168-20-211.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.20.211",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Name": "worker-1-volume"
                },
                "tags_all": {
                  "Name": "worker-1-volume"
                },
                "throughput": 125,
                "volume_id": "vol-0ebc7ff2faa39265e",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0c3d221f95e9213b3"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-066913c392fff5b8a",
            "tags": {
              "Name": "worker-1"
            },
            "tags_all": {
              "Name": "worker-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c3d221f95e9213b3"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "808407022124",
            "id": "i-0d33b452722876546",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.iam.aws_iam_instance_profile.k8s_nodes_profile",
            "module.iam.aws_iam_role.k8s_nodes_role",
            "module.instances.aws_instance.master",
            "module.instances.aws_key_pair.bastion_key",
            "module.instances.tls_private_key.bastion_key",
            "module.security_groups.aws_security_group.master",
            "module.security_groups.aws_security_group.workers",
            "module.subnets.aws_subnet.private",
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c398cb65a93047f2",
            "arn": "arn:aws:ec2:us-east-1:808407022124:instance/i-0f9801379fecfa539",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "k8s-nodes-instance-profile",
            "id": "i-0f9801379fecfa539",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "bastion-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-028f12737fd179b05"
              }
            ],
            "primary_network_interface_id": "eni-028f12737fd179b05",
            "private_dns": "ip-192-168-20-126.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.20.126",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Name": "worker-2-volume"
                },
                "tags_all": {
                  "Name": "worker-2-volume"
                },
                "throughput": 125,
                "volume_id": "vol-0432760d9573d8c44",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0c3d221f95e9213b3"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-066913c392fff5b8a",
            "tags": {
              "Name": "worker-2"
            },
            "tags_all": {
              "Name": "worker-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c3d221f95e9213b3"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "808407022124",
            "id": "i-0f9801379fecfa539",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.iam.aws_iam_instance_profile.k8s_nodes_profile",
            "module.iam.aws_iam_role.k8s_nodes_role",
            "module.instances.aws_instance.master",
            "module.instances.aws_key_pair.bastion_key",
            "module.instances.tls_private_key.bastion_key",
            "module.security_groups.aws_security_group.master",
            "module.security_groups.aws_security_group.workers",
            "module.subnets.aws_subnet.private",
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.natgw",
      "mode": "managed",
      "type": "aws_eip",
      "name": "natgw_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e962606ce54f0a6c",
            "arn": "arn:aws:ec2:us-east-1:808407022124:elastic-ip/eipalloc-0e962606ce54f0a6c",
            "association_id": "eipassoc-086a5e3cfe1dafcea",
            "domain": "vpc",
            "id": "eipalloc-0e962606ce54f0a6c",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0a64ff34477cf9bd0",
            "private_dns": "ip-192-168-10-223.ec2.internal",
            "private_ip": "192.168.10.223",
            "public_dns": "ec2-52-23-75-162.compute-1.amazonaws.com",
            "public_ip": "52.23.75.162",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "natgw_eip"
            },
            "tags_all": {
              "Name": "natgw_eip"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.natgw",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e962606ce54f0a6c",
            "association_id": "eipassoc-086a5e3cfe1dafcea",
            "connectivity_type": "public",
            "id": "nat-018ac73ba9e14034e",
            "network_interface_id": "eni-0a64ff34477cf9bd0",
            "private_ip": "192.168.10.223",
            "public_ip": "52.23.75.162",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07357a35dbc5c0319",
            "tags": {
              "Name": "natgw"
            },
            "tags_all": {
              "Name": "natgw"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.natgw.aws_eip.natgw_eip",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07619d7a6b1fa6cbd",
            "id": "r-rtb-028f0034a8ae0aab11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-028f0034a8ae0aab1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "808407022124",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-028f0034a8ae0aab1"
          },
          "dependencies": [
            "module.route_tables.aws_route_table.public",
            "module.vpc.aws_internet_gateway.k8s_igw",
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808407022124:route-table/rtb-0b4432ab3f14e920b",
            "id": "rtb-0b4432ab3f14e920b",
            "owner_id": "808407022124",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-018ac73ba9e14034e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_route_table"
            },
            "tags_all": {
              "Name": "private_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-076279cff8b6b1820"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "808407022124",
            "id": "rtb-0b4432ab3f14e920b",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.natgw.aws_eip.natgw_eip",
            "module.natgw.aws_nat_gateway.natgw",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808407022124:route-table/rtb-028f0034a8ae0aab1",
            "id": "rtb-028f0034a8ae0aab1",
            "owner_id": "808407022124",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07619d7a6b1fa6cbd",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_route_table"
            },
            "tags_all": {
              "Name": "public_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-076279cff8b6b1820"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "808407022124",
            "id": "rtb-028f0034a8ae0aab1",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01c147fb6824741b0",
            "region": "us-east-1",
            "route_table_id": "rtb-0b4432ab3f14e920b",
            "subnet_id": "subnet-066913c392fff5b8a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.natgw.aws_eip.natgw_eip",
            "module.natgw.aws_nat_gateway.natgw",
            "module.route_tables.aws_route_table.private",
            "module.subnets.aws_subnet.private",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-099e58582fea453d0",
            "region": "us-east-1",
            "route_table_id": "rtb-028f0034a8ae0aab1",
            "subnet_id": "subnet-07357a35dbc5c0319"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.route_tables.aws_route_table.public",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808407022124:security-group/sg-05daf7dc6cc3043f0",
            "description": "Security group for bastion host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05daf7dc6cc3043f0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all inbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "bastion-sg",
            "name_prefix": "",
            "owner_id": "808407022124",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion-sg"
            },
            "tags_all": {
              "Name": "bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-076279cff8b6b1820"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "808407022124",
            "id": "sg-05daf7dc6cc3043f0",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "clb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808407022124:security-group/sg-071aa356770d63f25",
            "description": "Security group for CLB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-071aa356770d63f25",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP inbound traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS inbound traffic",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "clb-sg",
            "name_prefix": "",
            "owner_id": "808407022124",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "clb-sg"
            },
            "tags_all": {
              "Name": "clb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-076279cff8b6b1820"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "808407022124",
            "id": "sg-071aa356770d63f25",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808407022124:security-group/sg-043bf0655b9282c62",
            "description": "Security group for Jenkins server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-043bf0655b9282c62",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ICMP from anywhere",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Jenkins web UI access",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "SSH access from bastion host",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05daf7dc6cc3043f0"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "jenkins-sg",
            "name_prefix": "",
            "owner_id": "808407022124",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jenkins-sg"
            },
            "tags_all": {
              "Name": "jenkins-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-076279cff8b6b1820"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "808407022124",
            "id": "sg-043bf0655b9282c62",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808407022124:security-group/sg-0d0eda287472d94bd",
            "description": "Security group for master nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d0eda287472d94bd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Open ICMP protocole from every where",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [],
                "description": "Allow all inbound traffic from master security group",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Kubelet API",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c3d221f95e9213b3"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Kubernetes API server from workers",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c3d221f95e9213b3"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "NodePort Services TCP from CLB",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-071aa356770d63f25"
                ],
                "self": false,
                "to_port": 32767
              },
              {
                "cidr_blocks": [],
                "description": "NodePort Services TCP from master",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 32767
              },
              {
                "cidr_blocks": [],
                "description": "SSH access from bastion host",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05daf7dc6cc3043f0"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "etcd server client API",
                "from_port": 2379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c3d221f95e9213b3"
                ],
                "self": false,
                "to_port": 2380
              },
              {
                "cidr_blocks": [],
                "description": "kube-controller-manager",
                "from_port": 10257,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c3d221f95e9213b3"
                ],
                "self": false,
                "to_port": 10257
              },
              {
                "cidr_blocks": [],
                "description": "kube-scheduler",
                "from_port": 10259,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c3d221f95e9213b3"
                ],
                "self": false,
                "to_port": 10259
              }
            ],
            "name": "master-sg",
            "name_prefix": "",
            "owner_id": "808407022124",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "master-sg"
            },
            "tags_all": {
              "Name": "master-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-076279cff8b6b1820"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "808407022124",
            "id": "sg-0d0eda287472d94bd",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808407022124:security-group/sg-0c3d221f95e9213b3",
            "description": "Security group for worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c3d221f95e9213b3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Open ICMP protocole from every where",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [],
                "description": "Allow all inbound traffic from workers security group",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Kubelet API from master",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d0eda287472d94bd"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "NodePort Services TCP from CLB",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-071aa356770d63f25"
                ],
                "self": false,
                "to_port": 32767
              },
              {
                "cidr_blocks": [],
                "description": "NodePort Services TCP from master",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d0eda287472d94bd"
                ],
                "self": false,
                "to_port": 32767
              },
              {
                "cidr_blocks": [],
                "description": "NodePort Services UDP from master",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [
                  "sg-0d0eda287472d94bd"
                ],
                "self": false,
                "to_port": 32767
              },
              {
                "cidr_blocks": [],
                "description": "SSH access from bastion host",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05daf7dc6cc3043f0"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "kube-proxy from master",
                "from_port": 10256,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d0eda287472d94bd"
                ],
                "self": false,
                "to_port": 10256
              }
            ],
            "name": "worker-sg",
            "name_prefix": "",
            "owner_id": "808407022124",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "worker-sg"
            },
            "tags_all": {
              "Name": "worker-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-076279cff8b6b1820"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "808407022124",
            "id": "sg-0c3d221f95e9213b3",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "CLB_http_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow HTTP inbound traffic",
            "from_port": 80,
            "id": "sgrule-3443034971",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-071aa356770d63f25",
            "security_group_rule_id": "sgr-07687230e8265990f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.clb",
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "CLB_https_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow HTTPS inbound traffic",
            "from_port": 443,
            "id": "sgrule-2231792125",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-071aa356770d63f25",
            "security_group_rule_id": "sgr-0cfc72c7b2057bbeb",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.clb",
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion_ingress_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all inbound traffic",
            "from_port": 0,
            "id": "sgrule-3831154872",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "us-east-1",
            "security_group_id": "sg-05daf7dc6cc3043f0",
            "security_group_rule_id": "sgr-0884eca60a4e0adcb",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.bastion-sg",
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "grafana_nodeport_tcp_from_clb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "NodePort Services TCP from CLB",
            "from_port": 30000,
            "id": "sgrule-3025033164",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0d0eda287472d94bd",
            "security_group_rule_id": "sgr-0a4dfca47596a926d",
            "self": false,
            "source_security_group_id": "sg-071aa356770d63f25",
            "timeouts": null,
            "to_port": 32767,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.clb",
            "module.security_groups.aws_security_group.master",
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "grafana_nodeport_tcp_from_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "NodePort Services TCP from master",
            "from_port": 30000,
            "id": "sgrule-364864786",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0d0eda287472d94bd",
            "security_group_rule_id": "sgr-012252de466ee8e7b",
            "self": false,
            "source_security_group_id": "sg-0d0eda287472d94bd",
            "timeouts": null,
            "to_port": 32767,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.master",
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "jenkins_icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "ICMP from anywhere",
            "from_port": -1,
            "id": "sgrule-1108473199",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "icmp",
            "region": "us-east-1",
            "security_group_id": "sg-043bf0655b9282c62",
            "security_group_rule_id": "sgr-0104d40fd8c4d58e6",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.jenkins",
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "jenkins_ssh_from_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "SSH access from bastion host",
            "from_port": 22,
            "id": "sgrule-321043708",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-043bf0655b9282c62",
            "security_group_rule_id": "sgr-0037c9fee8ec7d939",
            "self": false,
            "source_security_group_id": "sg-05daf7dc6cc3043f0",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.bastion-sg",
            "module.security_groups.aws_security_group.jenkins",
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "jenkins_web_ui",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Jenkins web UI access",
            "from_port": 8080,
            "id": "sgrule-3748003170",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-043bf0655b9282c62",
            "security_group_rule_id": "sgr-07ceb4a77e53495da",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.jenkins",
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_api_from_workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Kubernetes API server from workers",
            "from_port": 6443,
            "id": "sgrule-3969335370",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0d0eda287472d94bd",
            "security_group_rule_id": "sgr-022f6a949e58f108e",
            "self": false,
            "source_security_group_id": "sg-0c3d221f95e9213b3",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.master",
            "module.security_groups.aws_security_group.workers",
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_controller_from_workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "kube-controller-manager",
            "from_port": 10257,
            "id": "sgrule-856089994",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0d0eda287472d94bd",
            "security_group_rule_id": "sgr-0d85e644c1cb36a86",
            "self": false,
            "source_security_group_id": "sg-0c3d221f95e9213b3",
            "timeouts": null,
            "to_port": 10257,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.master",
            "module.security_groups.aws_security_group.workers",
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_etcd_from_workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "etcd server client API",
            "from_port": 2379,
            "id": "sgrule-1966605032",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0d0eda287472d94bd",
            "security_group_rule_id": "sgr-09b9c7f00b2c42de3",
            "self": false,
            "source_security_group_id": "sg-0c3d221f95e9213b3",
            "timeouts": null,
            "to_port": 2380,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.master",
            "module.security_groups.aws_security_group.workers",
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Open ICMP protocole from every where",
            "from_port": -1,
            "id": "sgrule-3015890467",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "icmp",
            "region": "us-east-1",
            "security_group_id": "sg-0d0eda287472d94bd",
            "security_group_rule_id": "sgr-078652c03f63bd20d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.master",
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_kubelet_from_workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Kubelet API",
            "from_port": 10250,
            "id": "sgrule-3203945707",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0d0eda287472d94bd",
            "security_group_rule_id": "sgr-013cd4eebb897565b",
            "self": false,
            "source_security_group_id": "sg-0c3d221f95e9213b3",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.master",
            "module.security_groups.aws_security_group.workers",
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_scheduler_from_workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "kube-scheduler",
            "from_port": 10259,
            "id": "sgrule-4085940489",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0d0eda287472d94bd",
            "security_group_rule_id": "sgr-0008b91a52e5b9214",
            "self": false,
            "source_security_group_id": "sg-0c3d221f95e9213b3",
            "timeouts": null,
            "to_port": 10259,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.master",
            "module.security_groups.aws_security_group.workers",
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow all inbound traffic from master security group",
            "from_port": 0,
            "id": "sgrule-4130769699",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "us-east-1",
            "security_group_id": "sg-0d0eda287472d94bd",
            "security_group_rule_id": "sgr-04afeb141cea6f091",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.master",
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ssh_from_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "SSH access from bastion host",
            "from_port": 22,
            "id": "sgrule-3237723639",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0d0eda287472d94bd",
            "security_group_rule_id": "sgr-063c8f049005fdfc5",
            "self": false,
            "source_security_group_id": "sg-05daf7dc6cc3043f0",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.bastion-sg",
            "module.security_groups.aws_security_group.master",
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Open ICMP protocole from every where",
            "from_port": -1,
            "id": "sgrule-6361772",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "icmp",
            "region": "us-east-1",
            "security_group_id": "sg-0c3d221f95e9213b3",
            "security_group_rule_id": "sgr-0642de7b944e9d2f9",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.workers",
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_kubelet_from_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Kubelet API from master",
            "from_port": 10250,
            "id": "sgrule-2999186475",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0c3d221f95e9213b3",
            "security_group_rule_id": "sgr-0ff62ad7ed9583bef",
            "self": false,
            "source_security_group_id": "sg-0d0eda287472d94bd",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.master",
            "module.security_groups.aws_security_group.workers",
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_kubeproxy_from_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "kube-proxy from master",
            "from_port": 10256,
            "id": "sgrule-192156977",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0c3d221f95e9213b3",
            "security_group_rule_id": "sgr-0f27bec7b3f9c03eb",
            "self": false,
            "source_security_group_id": "sg-0d0eda287472d94bd",
            "timeouts": null,
            "to_port": 10256,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.master",
            "module.security_groups.aws_security_group.workers",
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_nodeport_tcp_from_clb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "NodePort Services TCP from CLB",
            "from_port": 30000,
            "id": "sgrule-4041180028",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0c3d221f95e9213b3",
            "security_group_rule_id": "sgr-0d4c4c8741a0efdf3",
            "self": false,
            "source_security_group_id": "sg-071aa356770d63f25",
            "timeouts": null,
            "to_port": 32767,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.clb",
            "module.security_groups.aws_security_group.workers",
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_nodeport_tcp_from_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "NodePort Services TCP from master",
            "from_port": 30000,
            "id": "sgrule-1362014626",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0c3d221f95e9213b3",
            "security_group_rule_id": "sgr-0bcbb66cbd9b43937",
            "self": false,
            "source_security_group_id": "sg-0d0eda287472d94bd",
            "timeouts": null,
            "to_port": 32767,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.master",
            "module.security_groups.aws_security_group.workers",
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_nodeport_udp_from_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "NodePort Services UDP from master",
            "from_port": 30000,
            "id": "sgrule-4117828173",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "region": "us-east-1",
            "security_group_id": "sg-0c3d221f95e9213b3",
            "security_group_rule_id": "sgr-0747cffc0dafb6bd8",
            "self": false,
            "source_security_group_id": "sg-0d0eda287472d94bd",
            "timeouts": null,
            "to_port": 32767,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.master",
            "module.security_groups.aws_security_group.workers",
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow all inbound traffic from workers security group",
            "from_port": 0,
            "id": "sgrule-2045135561",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "us-east-1",
            "security_group_id": "sg-0c3d221f95e9213b3",
            "security_group_rule_id": "sgr-0758aa278d3ff9e22",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.workers",
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ssh_from_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "SSH access from bastion host",
            "from_port": 22,
            "id": "sgrule-2579249298",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0c3d221f95e9213b3",
            "security_group_rule_id": "sgr-00485193f4f16b74f",
            "self": false,
            "source_security_group_id": "sg-05daf7dc6cc3043f0",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.bastion-sg",
            "module.security_groups.aws_security_group.workers",
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808407022124:subnet/subnet-066913c392fff5b8a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-066913c392fff5b8a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "808407022124",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private_subnet"
            },
            "tags_all": {
              "Name": "private_subnet"
            },
            "vpc_id": "vpc-076279cff8b6b1820"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "808407022124",
            "id": "subnet-066913c392fff5b8a",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808407022124:subnet/subnet-07357a35dbc5c0319",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07357a35dbc5c0319",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "808407022124",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public_subnet"
            },
            "tags_all": {
              "Name": "public_subnet"
            },
            "vpc_id": "vpc-076279cff8b6b1820"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "808407022124",
            "id": "subnet-07357a35dbc5c0319",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "k8s_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808407022124:internet-gateway/igw-07619d7a6b1fa6cbd",
            "id": "igw-07619d7a6b1fa6cbd",
            "owner_id": "808407022124",
            "region": "us-east-1",
            "tags": {
              "Name": "k8s_igw"
            },
            "tags_all": {
              "Name": "k8s_igw"
            },
            "vpc_id": "vpc-076279cff8b6b1820"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "k8s_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808407022124:vpc/vpc-076279cff8b6b1820",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-085f8edf56419f58a",
            "default_route_table_id": "rtb-0dc2a2868aa1f3152",
            "default_security_group_id": "sg-0dc6565f97c2c00f6",
            "dhcp_options_id": "dopt-03f40977464c6d63f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-076279cff8b6b1820",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0dc2a2868aa1f3152",
            "owner_id": "808407022124",
            "region": "us-east-1",
            "tags": {
              "Name": "k8s_vpc"
            },
            "tags_all": {
              "Name": "k8s_vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "808407022124",
            "id": "vpc-076279cff8b6b1820",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}